<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.legolambnon.rejestrpolowu.EntryActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="514dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="7dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <TextView
            android:id="@+id/textSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textWeight"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textWeight"
            android:ems="10"
            android:focusable="false"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:text="@string/species"
            android:textColorLink="@color/colorPrimary"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="387dp" />

        <Spinner
            android:id="@+id/spin_species"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/textSpecies"
            android:layout_toRightOf="@+id/textSpecies"
            android:textSize="38dp"
            tools:layout_editor_absoluteX="302dp"
            tools:layout_editor_absoluteY="422dp"
            android:layout_above="@+id/textLength" />

        <TextView
            android:id="@+id/textLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textSpecies"
            android:layout_toStartOf="@+id/spin_species"
            android:layout_toLeftOf="@+id/spin_species"
            android:ems="10"
            android:focusable="false"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:text="@string/length"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="53dp"
            android:layout_alignBottom="@+id/get_length"
            android:layout_alignRight="@+id/textWeight"
            android:layout_alignEnd="@+id/textWeight" />

        <EditText
            android:id="@+id/get_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textSpecies"
            android:layout_toEndOf="@+id/textSpecies"
            android:layout_toRightOf="@+id/textSpecies"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="455dp" />

        <TextView
            android:id="@+id/textWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textLength"
            android:ems="10"
            android:focusable="false"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:text="@string/weight"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="117dp"
            android:layout_alignBottom="@+id/get_weight"
            android:layout_toLeftOf="@+id/btnDate"
            android:layout_toStartOf="@+id/btnDate" />

        <EditText
            android:id="@+id/get_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/get_length"
            android:layout_toEndOf="@+id/textLength"
            android:layout_toRightOf="@+id/textLength"
            android:ems="10"
            android:inputType="number"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textTime"
            app:layout_constraintLeft_toLeftOf="@+id/btnDate"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textWeight"
            android:ems="10"
            android:focusable="false"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:text="@string/date"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textArea"
            app:layout_constraintRight_toLeftOf="@+id/btnDate"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_toStartOf="@+id/btnSave"
            android:layout_toLeftOf="@+id/btnSave" />

        <Button
            android:id="@+id/btnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/get_weight"
            android:layout_toEndOf="@+id/textDate"
            android:layout_toRightOf="@+id/textDate"
            android:text="@string/btnDate"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/textArea"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textDate"
            android:ems="10"
            android:focusable="false"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:text="@string/area"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textTime"
            app:layout_constraintLeft_toLeftOf="@+id/textDate"
            app:layout_constraintRight_toRightOf="@+id/textDate"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_toLeftOf="@+id/btnDate"
            android:layout_toStartOf="@+id/btnDate"
            android:layout_above="@+id/btnTime" />

        <EditText
            android:id="@+id/get_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnDate"
            android:layout_toEndOf="@+id/textArea"
            android:layout_toRightOf="@+id/textArea"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/get_weight"
            app:layout_constraintRight_toRightOf="@+id/get_weight"
            app:layout_constraintTop_toBottomOf="@+id/get_weight"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textArea"
            android:ems="10"
            android:focusable="false"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:text="Godzina:"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textBait"
            app:layout_constraintLeft_toLeftOf="@+id/textArea"
            app:layout_constraintRight_toRightOf="@+id/textArea"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_alignBottom="@+id/btnTime"
            android:layout_toLeftOf="@+id/get_area"
            android:layout_toStartOf="@+id/get_area" />

        <Button
            android:id="@+id/btnTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/get_area"
            android:layout_toEndOf="@+id/textTime"
            android:layout_toRightOf="@+id/textTime"
            android:text="Wybierz godzinę"
            app:layout_constraintLeft_toRightOf="@+id/textTime"
            app:layout_constraintTop_toBottomOf="@+id/get_area"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/textBait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textTime"
            android:ems="10"
            android:focusable="false"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:text="Przynęta:"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/editWeather"
            app:layout_constraintLeft_toLeftOf="@+id/textTime"
            app:layout_constraintRight_toRightOf="@+id/textTime"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_alignBottom="@+id/get_bait"
            android:layout_toLeftOf="@+id/btnTime"
            android:layout_toStartOf="@+id/btnTime" />

        <EditText
            android:id="@+id/get_bait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textTime"
            android:layout_toEndOf="@+id/textTime"
            android:layout_toRightOf="@+id/textTime"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/get_area"
            app:layout_constraintRight_toRightOf="@+id/get_area"
            app:layout_constraintTop_toBottomOf="@+id/get_area"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/editWeather"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:ems="10"
            android:focusable="false"
            android:gravity="center_vertical"
            android:inputType="textPersonName"
            android:text="Pogoda:"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/textBait"
            app:layout_constraintRight_toRightOf="@+id/textBait"
            app:layout_constraintTop_toTopOf="@+id/btnDate"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            android:layout_below="@+id/textBait"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/get_bait"
            android:layout_toStartOf="@+id/get_bait"
            android:layout_alignBottom="@+id/get_weather" />

        <EditText
            android:id="@+id/get_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textBait"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/get_bait"
            app:layout_constraintRight_toRightOf="@+id/get_bait"
            app:layout_constraintTop_toBottomOf="@+id/get_bait"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            android:layout_toRightOf="@+id/textBait"
            android:layout_toEndOf="@+id/textBait" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="38dp"
            android:text="@string/btnSave"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
